[gd_scene load_steps=24 format=3 uid="uid://b5s0vffw3hdgd"]

[ext_resource type="Script" path="res://levels/bridge_city_to_tower/bridge_city_to_tower.gd" id="1_pbnj1"]
[ext_resource type="TileSet" uid="uid://btf342mldfbya" path="res://assets/levels/city/city_floor/tilesets/city_floor-tileset-16x16.res" id="2_sqevg"]
[ext_resource type="Script" path="res://other/portal.gd" id="2_vsfw8"]
[ext_resource type="Texture2D" uid="uid://7cw0xt8ufxu8" path="res://assets/other/door.png" id="3_2plir"]
[ext_resource type="Texture2D" uid="uid://d4ndsnfe477rs" path="res://assets/levels/bridge_city_to_tower/bridge_prototype.png" id="5_sr14i"]
[ext_resource type="Script" path="res://levels/bridge_city_to_tower/AnimationPlayer.gd" id="7_8gvld"]
[ext_resource type="PackedScene" path="res://other/dialogbox.tscn" id="7_her2d"]
[ext_resource type="Script" path="res://cutscenes/intro/act0.gd" id="7_o7k3d"]
[ext_resource type="Script" path="res://cutscenes/intro/act1.gd" id="8_2dnxa"]
[ext_resource type="PackedScene" uid="uid://glxdm1e2vpr4" path="res://entities/corrupted_bandit/corrupted_bandit.tscn" id="9_lin5f"]
[ext_resource type="PackedScene" uid="uid://du248qvl7jubl" path="res://entities/player/player.tscn" id="9_ub1y7"]
[ext_resource type="PackedScene" uid="uid://c6qv07kj57ou6" path="res://entities/bandit/bandit.tscn" id="10_qnf1p"]
[ext_resource type="Script" path="res://cutscenes/intro/act2.gd" id="12_dupbb"]
[ext_resource type="Texture2D" uid="uid://dr8y7023tv2dk" path="res://icon.svg" id="12_m5ntc"]
[ext_resource type="PackedScene" uid="uid://4xefw6lhcjh8" path="res://entities/tank_bandit/tank_bandit.tscn" id="15_467xs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kcovx"]
size = Vector2(96, 132)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhcvv"]
size = Vector2(128, 436)

[sub_resource type="Animation" id="Animation_xh3be"]
resource_name = "Act0"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Act0")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_cutscene_intro_start"
}, {
"args": [],
"method": &"_cutscene_intro_end"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("../Player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2406, -34), Vector2(-1278, -34)]
}

[sub_resource type="Animation" id="Animation_femde"]
resource_name = "Act1"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Act1/BanditDialog:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 5, 6, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["", "Well, what have we here?", "", "Then we’ll make it short. Give it to us.", "", "Kill him.", ""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Act1/Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 7.5, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(280, -110), Vector2(280, -110), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Act1/CorruptedBanditDialog:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["", "Not very talkative, ey?", "", ""]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Act1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Act1/BanditBow:passive")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Act1/BanditSword:passive")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Act1:process_mode")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("%Act1/Camera:enabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../Player:dialog_text")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(2, 3, 4, 5, 6, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["...", "", "Only in good company.", "", "And what would “it” be?", ""]
}

[sub_resource type="Animation" id="Animation_pnc0o"]
resource_name = "Act2"
length = 3.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Act2/TankBandit:dialog_text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["", "Where is it, child?", ""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Act2/Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 3.3, 3.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(190, -110), Vector2(190, -110), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Act2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Act2:process_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%Act2/Camera:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Player:dialog_text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.9, 1.7, 2.5, 3.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Is this where you ask me to join you?", "", "Did you mean this?", ""]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%Act2/TankBandit:is_passive")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1, 3.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("%Act2/TankBandit")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [{
"Position": Vector2(0, 0)
}],
"method": &"_on_idle_player_entered_vision"
}]
}

[sub_resource type="Animation" id="Animation_7j3kx"]
resource_name = "Act3"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Act3/Separator/BanditKneeling:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Act3/Separator/BanditKneeling/TankDialog:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1, 2.6, 3.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": ["", "Who are you?", "", "You rotten... Ugh-", ""]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Act3/Camera:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 5.5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -55), Vector2(0, -55), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Act3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Act3:process_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%Act3/Camera:zoom")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 5.5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Act3/ColorRect:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 3, 3.4, 3.42, 5, 5.5),
"transitions": PackedFloat32Array(1, 1e+06, 1e-05, 1e-05, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0.701961, 0.701961, 0.701961, 1), Color(0.701961, 0.701961, 0.701961, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Act3/ColorRect:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 3, 5.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Act3/FatherDialog:text")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 3.8, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["", "Carry this with you, it’s an artifact from the Tower. As long as you have this...", ""]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("%Act3/Camera:enabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../Player:dialog_text")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1, 2.6, 5.2, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["My name is Nym. Remember it for when you wander the after life.", "", "I will find you.", ""]
}

[sub_resource type="Animation" id="Animation_xud73"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2406, -34)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Act1:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Act2:process_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%Act3:process_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%Act1:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%Act2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%Act3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("%Act2/TankBandit:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(717, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("%Act3/ColorRect:color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("%Act3/ColorRect:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("%Act1/Camera:enabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("%Act2/Camera:enabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("%Act3/Camera:enabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("../Player:dialog_text")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("%Act2/TankBandit:dialog_text")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0pxhb"]
_data = {
"Act0": SubResource("Animation_xh3be"),
"Act1": SubResource("Animation_femde"),
"Act2": SubResource("Animation_pnc0o"),
"Act3": SubResource("Animation_7j3kx"),
"RESET": SubResource("Animation_xud73")
}

[node name="BridgeCityToTower" type="Node2D"]
script = ExtResource("1_pbnj1")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_sqevg")
format = 2
layer_0/tile_data = PackedInt32Array(65532, 65537, 1, 65533, 131073, 1, 65534, 196609, 1, 65535, 262145, 1, 65528, 65537, 1, 65529, 131073, 1, 65530, 196609, 1, 65531, 262145, 1, 65524, 65537, 1, 65525, 131073, 1, 65526, 196609, 1, 65527, 262145, 1, 65520, 65537, 1, 65521, 131073, 1, 65522, 196609, 1, 65523, 262145, 1, 65516, 65537, 1, 65517, 131073, 1, 65518, 196609, 1, 65519, 262145, 1, 65512, 65537, 1, 65513, 131073, 1, 65514, 196609, 1, 65515, 262145, 1, 65508, 65537, 1, 65509, 131073, 1, 65510, 196609, 1, 65511, 262145, 1, 65504, 65537, 1, 65505, 131073, 1, 65506, 196609, 1, 65507, 262145, 1, 0, 65537, 1, 1, 131073, 1, 2, 196609, 1, 3, 262145, 1, 4, 65537, 1, 5, 131073, 1, 6, 196609, 1, 7, 262145, 1, 8, 65537, 1, 9, 131073, 1, 10, 196609, 1, 11, 262145, 1, 12, 65537, 1, 13, 131073, 1, 14, 196609, 1, 15, 262145, 1, 16, 65537, 1, 17, 131073, 1, 18, 196609, 1, 19, 262145, 1, 20, 65537, 1, 21, 131073, 1, 22, 196609, 1, 23, 262145, 1, 24, 65537, 1, 25, 131073, 1, 26, 196609, 1, 27, 65537, 1, 28, 131073, 1, 29, 196609, 1, 30, 262145, 1, 31, 65537, 1, 32, 131073, 1, 33, 196609, 1, 34, 262145, 1, 35, 65537, 1, 36, 131073, 1, 37, 196609, 1, 38, 262145, 1, 39, 65537, 1, 40, 131073, 1, 41, 196609, 1, 42, 262145, 1, 43, 65537, 1, 44, 131073, 1, 45, 196609, 1, 46, 262145, 1, 47, 65537, 1, 48, 131073, 1, 49, 196609, 1, 50, 262145, 1, 51, 65537, 1, 52, 131073, 1, 53, 196609, 1, 54, 262145, 1, 55, 65537, 1, 56, 131073, 1, 57, 196609, 1, 58, 262145, 1, 59, 65537, 1, 60, 131073, 1, 61, 196609, 1, 62, 262145, 1, 63, 65537, 1, 64, 131073, 1, 65, 196609, 1, 66, 262145, 1, 67, 65537, 1, 68, 131073, 1, 69, 196609, 1, 70, 262145, 1, 71, 65537, 1, 72, 131073, 1, 73, 196609, 1, 74, 262145, 1, 75, 65537, 1, 76, 131073, 1, 77, 196609, 1, 78, 262145, 1, 79, 65537, 1, 80, 131073, 1, 81, 196609, 1, 82, 262145, 1, 83, 65537, 1, 84, 131073, 1, 85, 196609, 1, 86, 262145, 1, 87, 65537, 1, 88, 131073, 1, 89, 196609, 1, 90, 262145, 1, 91, 65537, 1, 92, 131073, 1, 93, 196609, 1, 94, 262145, 1, 95, 65537, 1, 96, 131073, 1, 97, 196609, 1, 98, 262145, 1, 99, 65537, 1, 100, 131073, 1, 101, 196609, 1, 102, 262145, 1, 103, 65537, 1, 104, 131073, 1, 105, 196609, 1, 106, 262145, 1, 65500, 65537, 1, 65501, 131073, 1, 65502, 196609, 1, 65503, 262145, 1, 65496, 65537, 1, 65497, 131073, 1, 65498, 196609, 1, 65499, 262145, 1, 65492, 65537, 1, 65493, 131073, 1, 65494, 196609, 1, 65495, 262145, 1, 65488, 65537, 1, 65489, 131073, 1, 65490, 196609, 1, 65491, 262145, 1, 65484, 65537, 1, 65485, 131073, 1, 65486, 196609, 1, 65487, 262145, 1, 65480, 65537, 1, 65481, 131073, 1, 65482, 196609, 1, 65483, 262145, 1, 65476, 65537, 1, 65477, 131073, 1, 65478, 196609, 1, 65479, 262145, 1, 65472, 65537, 1, 65473, 131073, 1, 65474, 196609, 1, 65475, 262145, 1, 65468, 65537, 1, 65469, 131073, 1, 65470, 196609, 1, 65471, 262145, 1, 65464, 65537, 1, 65465, 131073, 1, 65466, 196609, 1, 65467, 262145, 1, 65460, 65537, 1, 65461, 131073, 1, 65462, 196609, 1, 65463, 262145, 1, 65456, 65537, 1, 65457, 131073, 1, 65458, 196609, 1, 65459, 262145, 1, 65452, 65537, 1, 65453, 131073, 1, 65454, 196609, 1, 65455, 262145, 1, 65448, 65537, 1, 65449, 131073, 1, 65450, 196609, 1, 65451, 262145, 1, 65444, 65537, 1, 65445, 131073, 1, 65446, 196609, 1, 65447, 262145, 1, 65440, 65537, 1, 65441, 131073, 1, 65442, 196609, 1, 65443, 262145, 1, 65436, 65537, 1, 65437, 131073, 1, 65438, 196609, 1, 65439, 262145, 1, 65432, 65537, 1, 65433, 131073, 1, 65434, 196609, 1, 65435, 262145, 1, 65428, 65537, 1, 65429, 131073, 1, 65430, 196609, 1, 65431, 262145, 1, 65424, 65537, 1, 65425, 131073, 1, 65426, 196609, 1, 65427, 262145, 1, 65420, 65537, 1, 65421, 131073, 1, 65422, 196609, 1, 65423, 262145, 1, 65416, 65537, 1, 65417, 131073, 1, 65418, 196609, 1, 65419, 262145, 1, 65412, 65537, 1, 65413, 131073, 1, 65414, 196609, 1, 65415, 262145, 1, 65408, 65537, 1, 65409, 131073, 1, 65410, 196609, 1, 65411, 262145, 1, 65404, 65537, 1, 65405, 131073, 1, 65406, 196609, 1, 65407, 262145, 1, 65400, 65537, 1, 65401, 131073, 1, 65402, 196609, 1, 65403, 262145, 1, 65396, 65537, 1, 65397, 131073, 1, 65398, 196609, 1, 65399, 262145, 1, 65392, 65537, 1, 65393, 131073, 1, 65394, 196609, 1, 65395, 262145, 1, 65388, 65537, 1, 65389, 131073, 1, 65390, 196609, 1, 65391, 262145, 1, 65384, 65537, 1, 65385, 131073, 1, 65386, 196609, 1, 65387, 262145, 1, 65380, 65537, 1, 65381, 131073, 1, 65382, 196609, 1, 65383, 262145, 1, 65376, 65537, 1, 65377, 131073, 1, 65378, 196609, 1, 65379, 262145, 1)

[node name="BridgePrototype" type="Sprite2D" parent="."]
position = Vector2(831, 269)
texture = ExtResource("5_sr14i")

[node name="portal_end" type="Area2D" parent="." node_paths=PackedStringArray("exit_pos")]
position = Vector2(1624, -60)
collision_layer = 0
collision_mask = 15
script = ExtResource("2_vsfw8")
to_portal = "start"
exit_pos = NodePath("end")
scene = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="portal_end"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_kcovx")

[node name="Icon2" type="Sprite2D" parent="portal_end/CollisionShape2D2"]
position = Vector2(0, -2.24997)
scale = Vector2(8.875, 8.34375)
texture = ExtResource("3_2plir")

[node name="end" type="Marker2D" parent="portal_end"]
position = Vector2(-179, -5)

[node name="Player" parent="." instance=ExtResource("9_ub1y7")]
position = Vector2(-2406, -34)
max_jumps = 1

[node name="CutsceneTrigger" type="Area2D" parent="."]
position = Vector2(66, -207)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CutsceneTrigger"]
position = Vector2(202, -13)
shape = SubResource("RectangleShape2D_bhcvv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath(".")
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_0pxhb")
}
script = ExtResource("7_8gvld")

[node name="Act0" type="Node" parent="AnimationPlayer" node_paths=PackedStringArray("player")]
script = ExtResource("7_o7k3d")
player = NodePath("../../Player")

[node name="Act1" type="Node2D" parent="AnimationPlayer"]
unique_name_in_owner = true
process_mode = 4
visible = false
position = Vector2(1242, -155)
script = ExtResource("8_2dnxa")

[node name="BanditDialog" parent="AnimationPlayer/Act1" instance=ExtResource("7_her2d")]
custom_minimum_size = Vector2(240, 23)
offset_left = 389.0
offset_top = -68.0
offset_right = 629.0
offset_bottom = -45.0
size_flags_horizontal = 0
text = ""

[node name="CorruptedBanditDialog" parent="AnimationPlayer/Act1" instance=ExtResource("7_her2d")]
custom_minimum_size = Vector2(230, 23)
offset_left = 495.0
offset_top = -68.0
offset_right = 735.0
offset_bottom = -45.0
size_flags_horizontal = 0
text = ""

[node name="BanditBow" parent="AnimationPlayer/Act1" instance=ExtResource("10_qnf1p")]
position = Vector2(509, 0)
rotation = 3.14159
scale = Vector2(5, -5)
passive = true

[node name="BanditSword" parent="AnimationPlayer/Act1" instance=ExtResource("9_lin5f")]
position = Vector2(622, 0)
rotation = 3.14159
scale = Vector2(5, -5)
passive = true

[node name="Camera" type="Camera2D" parent="AnimationPlayer/Act1"]
enabled = false

[node name="Act2" type="Node2D" parent="AnimationPlayer"]
unique_name_in_owner = true
process_mode = 4
visible = false
position = Vector2(1242, -155)
script = ExtResource("12_dupbb")

[node name="Camera" type="Camera2D" parent="AnimationPlayer/Act2"]
enabled = false

[node name="TankBandit" parent="AnimationPlayer/Act2" instance=ExtResource("15_467xs")]
position = Vector2(717, 0)

[node name="Act3" type="Node2D" parent="AnimationPlayer"]
unique_name_in_owner = true
process_mode = 4
visible = false
position = Vector2(1242, -155)

[node name="Separator" type="Node" parent="AnimationPlayer/Act3"]

[node name="BanditKneeling" type="Sprite2D" parent="AnimationPlayer/Act3/Separator"]
z_index = -1
position = Vector2(1486, -486)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_m5ntc")
offset = Vector2(0, -64)

[node name="TankDialog" parent="AnimationPlayer/Act3/Separator/BanditKneeling" instance=ExtResource("7_her2d")]
offset_left = -172.0
offset_top = -330.0
offset_right = 0.0
offset_bottom = -305.0
scale = Vector2(2, 2)
text = ""
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer/Act3"]
visible = false
offset_left = -521.0
offset_top = -418.0
offset_right = 550.0
offset_bottom = 323.0
size_flags_horizontal = 4
color = Color(0, 0, 0, 0)

[node name="FatherDialog" parent="AnimationPlayer/Act3" instance=ExtResource("7_her2d")]
offset_left = -146.0
offset_top = -67.0
offset_right = 155.0
offset_bottom = -12.0
text = ""

[node name="Camera" type="Camera2D" parent="AnimationPlayer/Act3"]
enabled = false

[connection signal="body_entered" from="CutsceneTrigger" to="." method="_on_cutscene_triggered" flags=6]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="AnimationPlayer" method="_on_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="AnimationPlayer" method="_on_animation_started"]
[connection signal="act_ended" from="AnimationPlayer/Act1" to="." method="_on_act_1_act_ended"]
[connection signal="act_ended" from="AnimationPlayer/Act2" to="." method="_on_act_2_act_ended"]
